--- a/src/main/resources/templates/blank.html
+++ b/src/main/resources/templates/blank.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Vincent">
 
-    <title>未选择课程</title>
-    <link rel="icon" type="image/x-icon" href="/images/icon.ico">
+    <title>404</title>
+    <link rel="icon" type="image/x-icon" href="/images/logo.ico">
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -33,8 +33,8 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+                <div class="sidebar-brand-icon">
+                    <img src="/images/logo.jpg" height="30" width="48">
                 </div>
                 <div class="sidebar-brand-text mx-3">SCU Course</div>
             </a>
@@ -47,6 +47,11 @@
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>主页</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="course-center.html">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>课程中心</span></a>
             </li>
 
             <!-- Divider -->
@@ -113,9 +118,13 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
-                    <!-- Page Heading -->
-                    <h1 class="h3 mb-3 text-gray-800">您尚未选择任何课程！</h1>
-                    <h1 class="h6 text-gray-800">请先在系统主页中选择课程，方可进入课程管理页面</h1>
+                    <!-- 404 Error Text -->
+                    <div class="text-center">
+                        <div class="error mx-auto" data-text="404">404</div>
+                        <p class="lead text-gray-800 mb-4">Oops !</p>
+                        <p class="text-gray-500 mb-2">抱歉，系统出现了错误......</p>
+                        <a href="index.html">&larr; 回到主页</a>
+                    </div>
 
 
                 </div>
