--- a/src/main/resources/templates/log-system.html
+++ b/src/main/resources/templates/log-system.html
@@ -7,15 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Vincent">
 
-    <title th:text="|${currentCourse} - 文件|"></title>
-    <link rel="icon" type="image/x-icon" href="/images/icon.ico">
+    <title th:text="|${currentCourse} - 用户日志|"></title>
+    <link rel="icon" type="image/x-icon" href="/images/logo.ico">
 
     <!-- Custom fonts for this template -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+          rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/sb-admin-2.css" rel="stylesheet">
@@ -25,7 +25,7 @@
 
 </head>
 
-<body id="page-top">
+    <body id="page-top">
 
     <!-- Page Wrapper -->
     <div id="wrapper">
@@ -35,8 +35,8 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+                <div class="sidebar-brand-icon">
+                    <img src="/images/logo.jpg" height="30" width="48">
                 </div>
                 <div class="sidebar-brand-text mx-3">SCU Course</div>
             </a>
@@ -50,45 +50,65 @@
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>主页</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="course-center.html">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>课程中心</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="log-system.html">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>系统日志</span></a>
+            </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
             <div class="sidebar-heading" th:text="${currentCourse}"></div>
 
-            <li class="nav-item">
+            <li th:if="${currentCourse}" class="nav-item">
                 <a class="nav-link" href="course.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>课程主页</span>
                 </a>
             </li>
-            <li class="nav-item">
+            <li th:if="${currentCourse}" class="nav-item">
                 <a class="nav-link" href="bulletin.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>公告</span>
                 </a>
             </li>
-            <li class="nav-item">
+            <li th:if="${currentCourse}" class="nav-item">
                 <a class="nav-link" href="attendance.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>签到</span>
                 </a>
             </li>
-            <li class="nav-item">
+            <li th:if="${currentCourse}" class="nav-item">
                 <a class="nav-link" href="homework.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>作业</span>
                 </a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="files.html">
+            <li th:if="${currentCourse}" class="nav-item">
+                <a class="nav-link" href="file.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>文件</span>
                 </a>
             </li>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider d-none d-md-block">
+            <li th:if="${currentCourse}" class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
+                   aria-expanded="true" aria-controls="collapsePages">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>日志</span>
+                </a>
+                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="log-user.html">用户日志</a>
+                        <a th:if="${memberType} eq 'admin'" class="collapse-item" href="log-course.html">课程日志</a>
+                    </div>
+                </div>
+            </li>
 
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
@@ -123,14 +143,14 @@
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600" th:text="${currentUser}"></span>
                                 <img class="img-profile rounded-circle"
-                                    th:src="@{images/undraw_profile.svg}">
+                                     th:src="@{images/undraw_profile.svg}">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="userDropdown">
+                                 aria-labelledby="userDropdown">
                                 <a class="dropdown-item" href="#">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     个人信息
@@ -156,31 +176,16 @@
                 <div class="container-fluid">
 
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">课程文件管理</h1>
+                        <h1 class="h3 mb-0 text-gray-800">系统日志</h1>
                     </div>
 
-                    <div class="card shadow mb-4">
-                        <div class="card-header">
-
-                            <span class="navbar-brand font-weight-bold text-primary ml-3">文件上传</span>
-                        </div>
-                        <div class="card-body">
-                            <form method="POST" enctype="multipart/form-data" th:action="@{fileUpload}">
-                                <input type="file" name="file"/>
-                                <button type="submit" name="source" value="course_file" class="btn btn-sm btn-primary">上传</button>
-                                <span class="h6 ml-2" th:text="${message}"></span>
-                            </form>
-                        </div>
-                    </div>
-
-                    <!-- 文件列表 -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
                             <nav class="navbar">
-                                <span class="navbar-brand font-weight-bold text-primary">文件列表</span>
+                                <span class="navbar-brand font-weight-bold text-primary">详细信息</span>
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item">
-                                        <a href="/filesExport">
+                                        <a href="/systemLogExport">
                                             <button class="btn btn-primary">导出表格</button>
                                         </a>
                                     </li>
@@ -191,37 +196,34 @@
                             <div class="table-responsive">
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
-                                        <tr>
-                                            <th>文件名</th>
-                                            <th>大小</th>
-                                            <th>上传者</th>
-                                            <th>上传时间</th>
-                                            <th>操作</th>
-                                        </tr>
+                                    <tr>
+                                        <th>时间</th>
+                                        <th>用户ID</th>
+                                        <th>用户名</th>
+                                        <th>课程ID</th>
+                                        <th>课程名</th>
+                                        <th>内容</th>
+                                    </tr>
                                     </thead>
                                     <tfoot>
-                                        <tr>
-                                            <th>文件名</th>
-                                            <th>大小</th>
-                                            <th>上传者</th>
-                                            <th>上传时间</th>
-                                            <th>操作</th>
-                                        </tr>
+                                    <tr>
+                                        <th>时间</th>
+                                        <th>用户ID</th>
+                                        <th>用户名</th>
+                                        <th>课程ID</th>
+                                        <th>课程名</th>
+                                        <th>内容</th>
+                                    </tr>
                                     </tfoot>
                                     <tbody>
-                                        <tr th:each="file : ${files}">
-                                            <td><a th:href="${file.url}" th:text="${file.file_name}"/></td>
-                                            <td th:text="${file.size}"></td>
-                                            <td th:text="${file.creator}"></td>
-                                            <td th:text="${file.date_created}"></td>
-                                            <td>
-                                                <form action="fileDelete">
-                                                    <input hidden name="fileId" th:value="${file.id}">
-                                                    <input hidden name="fileName" th:value="${file.file_name}">
-                                                    <button th:if="${memberType} eq 'admin' or ${currentUser} eq ${file.creator}" type="submit" class="btn btn-sm btn-danger">删除</button>
-                                                </form>
-                                            </td>
-                                        </tr>
+                                    <tr th:each="log : ${logs}">
+                                        <td th:text="${log.time}"></td>
+                                        <td th:text="${log.user_id}"></td>
+                                        <td th:text="${log.username}"></td>
+                                        <td th:text="${log.course_id}"></td>
+                                        <td th:text="${log.course_name}"></td>
+                                        <td th:text="${log.content}"></td>
+                                    </tr>
                                     </tbody>
                                 </table>
                             </div>
@@ -257,7 +259,7 @@
 
     <!-- Logout Modal-->
     <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
+         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
